第六章->第五节
实现文章列表的分页与搜索功能

--- a/Application/Admin/View/Content/index.html
+++ b/Application/Admin/View/Content/index.html
@@ -32,9 +32,9 @@
               <span class="input-group-addon">栏目</span>
               <select class="form-control" name="catid">
                 <option value='' >全部分类</option>
-                
-                <option value="" ></option>
-                
+                <foreach name="webSiteMenu" item="menu">
+                <option value="{$menu.menu_id}" >{$menu.name}</option>
+                </foreach>
               </select>
             </div>
           </div>
@@ -71,19 +71,19 @@
                 </tr>
                 </thead>
                 <tbody>
-                
+                <volist name="news" id="news">
                   <tr>
                     <td><input type="checkbox" name="pushcheck" value="{$new.news_id}"></td>
                     <td><input size=4 type='text'  name='' value=""/></td><!--6.7-->
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>{$news.news_id}</td>
+                    <td>{$news.title}</td>
+                    <td>{$news.catid|getCatName=$webSiteMenu,###}</td>
+                    <td>{$news.copyfrom|getCopyFromById}</td>
                     <td>
-                      
+                      {$news.thumb|isThumb}
                     </td>
-                    <td></td>
-                    <td><span  attr-status=""  attr-id="" class="sing_cursor singcms-on-off" id="singcms-on-off" ></span></td>
+                    <td>{$news.create_time|date="Y-m-d H:i",###}</td>
+                    <td><span  attr-status=""  attr-id="" class="sing_cursor singcms-on-off" id="singcms-on-off" ></span>{$news.status|status}</td>
                     <td><span class="sing_cursor glyphicon glyphicon-edit" aria-hidden="true" id="singcms-edit" attr-id="" ></span>
                       <a href="javascript:void(0)" id="singcms-delete"  attr-id=""  attr-message="删除">
                         <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
@@ -91,14 +91,14 @@
 
                     </td>
                   </tr>
-                
+                </volist>
 
                 </tbody>
               </table>
               <nav>
 
               <ul >
-                
+                {$pageres}
               </ul>
 
             </nav>
