--- a/Application/Admin/View/Content/index.html
+++ b/Application/Admin/View/Content/index.html
@@ -84,7 +84,7 @@
                     </td>
                     <td>{$news.create_time|date="Y-m-d H:i",###}</td>
                     <td><span  attr-status=""  attr-id="" class="sing_cursor singcms-on-off" id="singcms-on-off" ></span>{$news.status|status}</td>
-                    <td><span class="sing_cursor glyphicon glyphicon-edit" aria-hidden="true" id="singcms-edit" attr-id="" ></span>
+                    <td><span class="sing_cursor glyphicon glyphicon-edit singcms-edit" aria-hidden="true" id="singcms-edit" attr-id="{$news.news_id}" ></span>
                       <a href="javascript:void(0)" id="singcms-delete"  attr-id=""  attr-message="删除">
                         <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
                       </a>
