--- a/Application/Admin/View/Content/edit.html
+++ b/Application/Admin/View/Content/edit.html
@@ -99,7 +99,7 @@
                 <input type="text" class="form-control" name="keywords" id="inputPassword3" placeholder="请填写关键词" value="{$new.keywords}">
               </div>
             </div>
-
+            <input type="hidden" name="news_id" value="{$new.news_id}">
 
             <div class="form-group">
               <div class="col-sm-offset-2 col-sm-10">
