修改推荐位模板

--- a/Application/Admin/View/Position/index.html
+++ b/Application/Admin/View/Position/index.html
@@ -80,10 +80,9 @@
 <!-- /#wrapper -->
 <script>
     var SCOPE = {
-        'edit_url' : '/admin.php?c=positioncontent&a=edit',
-        'set_status_url' : '/admin.php?c=positioncontent&a=setStatus',
-        'add_url' : '/admin.php?c=positioncontent&a=add',
-        'listorder_url' : '/admin.php?c=positioncontent&a=listorder',
+        'edit_url' : '/admin.php?c=position&a=edit',
+        'set_status_url' : '/admin.php?c=position&a=setStatus',
+        'add_url' : '/admin.php?c=position&a=add',
     }
 
 </script>
