--- a/Application/Admin/View/Position/add.html
+++ b/Application/Admin/View/Position/add.html
@@ -13,10 +13,10 @@
 
 				<ol class="breadcrumb">
 					<li>
-						<i class="fa fa-dashboard"></i>  <a href="/admin.php?c=positioncontent">推荐位内容管理</a>
+						<i class="fa fa-dashboard"></i>  <a href="/admin.php?c=positioncontent">推荐位管理</a>
 					</li>
 					<li class="active">
-						<i class="fa fa-edit"></i> 添加推荐位内容
+						<i class="fa fa-edit"></i> 添加推荐位
 					</li>
 				</ol>
 			</div>
@@ -28,42 +28,18 @@
 
 				<form class="form-horizontal" id="singcms-form">
 					<div class="form-group">
-						<label for="inputname" class="col-sm-2 control-label">标题:</label>
+						<label for="inputname" class="col-sm-2 control-label">推荐位名称:</label>
 						<div class="col-sm-5">
-							<input type="text" name="title" class="form-control" id="inputname" placeholder="请填写标题">
+							<input type="text" name="name" class="form-control" id="inputname" placeholder="请填写标题">
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="inputname" class="col-sm-2 control-label">选择推荐位:</label>
+						<label for="inputname" class="col-sm-2 control-label">推荐位描述:</label>
 						<div class="col-sm-5">
-							<select class="form-control" name="position_id">
-
-									<option value=""></option>
-							</select>
+							<input type="text" name="description" class="form-control" id="inputdescription" placeholder="请填写标题">
 						</div>
 					</div>
 
-					<div class="form-group">
-						<label for="inputname" class="col-sm-2 control-label">缩图:</label>
-						<div class="col-sm-5">
-							<input id="file_upload"  type="file" multiple="true" >
-							<img style="display: none" id="upload_org_code_img" src="" width="150" height="150">
-							<input id="file_upload_image" name="thumb" type="hidden" multiple="true" value="">
-						</div>
-					</div>
-
-					<div class="form-group">
-						<label for="inputPassword3" class="col-sm-2 control-label">url:</label>
-						<div class="col-sm-5">
-							<input type="text" class="form-control" name="url" id="inputPassword3" placeholder="请url地址">
-						</div>
-					</div>
-					<div class="form-group">
-						<label for="inputname" class="col-sm-2 control-label">文章id:</label>
-						<div class="col-sm-5">
-							<input type="text" name="news_id" class="form-control" id="inputname" placeholder="如果和文章无关联的可以不添加文章id">
-						</div>
-					</div>
 					<div class="form-group">
 					<label for="inputPassword3" class="col-sm-2 control-label">状态:</label>
 					<div class="col-sm-5">
@@ -94,13 +70,10 @@
 </div>
 <script>
 	var SCOPE = {
-		'save_url' : '/admin.php?c=positioncontent&a=add',
-		'jump_url' : '/admin.php?c=positioncontent&a=index',
-		'ajax_upload_image_url' : '/admin.php?c=image&a=ajaxuploadimage',
-		'ajax_upload_swf' : '/Public/js/party/uploadify.swf'
+		'save_url' : '/admin.php?c=position&a=add',
+		'jump_url' : '/admin.php?c=position&a=index',
 	};
 </script>
 <!-- /#wrapper -->
 <script type="text/javascript" src="/Public/js/admin/form.js"></script>
-<script src="/Public/js/admin/image.js"></script>
 <include file="Index/footer" />
