--- a/Application/Admin/View/Positioncontent/index.html
+++ b/Application/Admin/View/Positioncontent/index.html
@@ -78,7 +78,7 @@
                                     <span  attr-status="<if condition='$cnt.status eq 1'>0<else/>1</if>"  attr-id="{$cnt.id}" class="sing_cursor singcms-on-off" id="singcms-on-off" >{$cnt.status|status}</span>
                                 </td>
                                 <td>
-                                    <span class="sing_cursor glyphicon glyphicon-edit" aria-hidden="true" id="singcms-edit" attr-id="" ></span>
+                                    <span class="sing_cursor glyphicon glyphicon-edit singcms-edit" aria-hidden="true" id="singcms-edit" attr-id="{$cnt.id}" ></span>
                                     <a href="javascript:void(0)" id="singcms-delete" class="singcms-delete" attr-id="{$cnt.id}"  attr-message="删除">
                                         <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
                                     </a>
