--- a/Application/Admin/View/Positioncontent/index.html
+++ b/Application/Admin/View/Positioncontent/index.html
@@ -69,7 +69,7 @@
                         <tbody>
                         <volist name="contents" id="cnt">
                             <tr>
-                                <td><input size=4 type='text'  name='' value=""/></td>
+                                <td><input size=4 type='text'  name='listorder[{$cnt.id}]' value="{$cnt.listorder}"/></td>
                                 <td>{$cnt.id}</td>
                                 <td>{$cnt.title}</td>
                                 <td>{$cnt.create_time|date='Y-m-d H:i',###}</td>
@@ -89,7 +89,7 @@
                     </table>
                     </from>
                     <div>
-                        <button  id="button-listorder" type="button" class="btn btn-primary dropdown-toggle" ><span class="glyphicon glyphicon-resize-vertical" aria-hidden="true"></span>更新排序</button>
+                        <button  id="button-order" type="button" class="btn btn-primary dropdown-toggle" ><span class="glyphicon glyphicon-resize-vertical" aria-hidden="true"></span>更新排序</button>
                     </div>
                 </div>
             </div>
