9-2站点信息和导航栏的数据填充
Menu模型获取数据修行为获取状态为1的正常数据

--- a/Application/Home/View/Index/header.html
+++ b/Application/Home/View/Index/header.html
@@ -1,8 +1,14 @@
+<?php
+    $webConfig = D('Basic')->select();
+    $menus = D('Menu')->getBarMenus();
+?>
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>sing资讯</title>
+  <title>{$webConfig.title}</title>
+  <meta name="keywords" content="{$webConfig.keywords}" />
+  <meta name="description" content="{$webConfig.description}" />
   <link rel="stylesheet" href="/Public/css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="/Public/css/home/main.css" type="text/css" />
 </head>
@@ -11,16 +17,15 @@
   <div class="navbar-inverse">
     <div class="container">
       <div class="navbar-header">
-        <a href="">
+        <a href="/">
           <img src="/Public/images/logo.png" alt="">
         </a>
       </div>
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="" class="curr">首页</a></li>
-        <li><a href="">体育</a></li>
-        <li><a href="">科技</a></li>
-        <li><a href="">人文</a></li>
-        <li><a href="">汽车</a></li>
+        <li><a href="/" <if condition="$result['catId'] eq 0">class="curr"</if>>首页</a></li>
+        <foreach name="menus" item="menu">
+        <li><a href="/index.php?c=cat&id={$menu.menu_id}" <if condition="$menu['menu_id'] eq $result['catId']">class="curr"</if>>{$menu.name}</a></li>
+        </foreach>
       </ul>
     </div>
   </div>
