--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -18,54 +18,20 @@
           </div>
         </div>
         <div class="news-list">
-          <dl>
-            <dt>一个悲伤的故事，马云彻底被王兴抛弃了</dt>
-            <dd class="news-img">
-              <img src="/Public/images/img4.jpg" alt="">
-            </dd>
-            <dd class="news-intro">
-              手段太刚猛，吃不消，美团这块肉，马云注定无福消遣。
-            </dd>
-            <dd class="news-info">
-              秋远俊二 <span>15:22</span> 阅读(1万)
-            </dd>
-          </dl>
-          <dl>
-            <dt>一个悲伤的故事，马云彻底被王兴抛弃了</dt>
-            <dd class="news-img">
-              <img src="/Public/images/img4.jpg" alt="">
-            </dd>
-            <dd class="news-intro">
-              手段太刚猛，吃不消，美团这块肉，马云注定无福消遣。
-            </dd>
-            <dd class="news-info">
-              秋远俊二 <span>15:22</span> 阅读(1万)
-            </dd>
-          </dl>
-          <dl>
-            <dt>一个悲伤的故事，马云彻底被王兴抛弃了</dt>
-            <dd class="news-img">
-              <img src="/Public/images/img4.jpg" alt="">
-            </dd>
-            <dd class="news-intro">
-              手段太刚猛，吃不消，美团这块肉，马云注定无福消遣。
-            </dd>
-            <dd class="news-info">
-              秋远俊二 <span>15:22</span> 阅读(1万)
-            </dd>
-          </dl>
-          <dl>
-            <dt>一个悲伤的故事，马云彻底被王兴抛弃了</dt>
-            <dd class="news-img">
-              <img src="/Public/images/img4.jpg" alt="">
-            </dd>
-            <dd class="news-intro">
-              手段太刚猛，吃不消，美团这块肉，马云注定无福消遣。
-            </dd>
-            <dd class="news-info">
-              秋远俊二 <span>15:22</span> 阅读(1万)
-            </dd>
-          </dl>
+          <volist name="result['listNews']" id="vo">
+            <dl>
+              <dt><a target="_blank" href="/index.php?c=detail&id={$vo.news_id}">{$vo.title}</a></dt>
+              <dd class="news-img">
+                <a target="_blank" href="/index.php?c=detail&id={$vo.news_id}"><img width="200" height="120" src="{$vo.thumb}" alt="{$vo.title}"></a>
+              </dd>
+              <dd class="news-intro">
+                {$vo.description}
+              </dd>
+              <dd class="news-info">
+                {$vo.keywords} <span>{$vo.create_time|date="Y-m-d H:i:s",###}</span> 阅读(<i news-id="{$vo.news_id}" class="news_count node-{$vo.news_id}">{$vo.count}</i>)
+              </dd>
+            </dl>
+          </volist>
         </div>
       </div>
       <include file="Index/right" />
