--- a/Application/Admin/View/Content/index.html
+++ b/Application/Admin/View/Content/index.html
@@ -88,7 +88,7 @@
                       <a href="javascript:void(0)" id="singcms-delete" class="singcms-delete"  attr-id="{$news.news_id}"  attr-message="删除" attr-status="-1">
                         <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
                       </a>
-
+                      <a target="_blank" href="/index.php?c=detail&a=view&id={$news.news_id}" class="sing_cursor glyphicon glyphicon-eye-open" aria-hidden="true"  ></a>
                     </td>
                   </tr>
                 </volist>
