--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -5,6 +5,7 @@
       <div class="col-sm-9 col-md-9">
         <div class="banner">
           <div class="banner-left">
+            <div class="banner-info"><span>阅读数</span><i class="news_count node-{$result['topPicNews'][0]['news_id']}" news-id="{$result['topPicNews'][0]['news_id']}" id="node-{$result['topPicNews'][0]['news_id']}"></i></div>
             <a target="_blank" href="/index.php?c=detail&id={$result['topPicNews'][0]['news_id']}"><img width="670" height="360" src="{$result['topPicNews'][0]['thumb']}" alt=""></a>
           </div>
           <div class="banner-right">
@@ -39,4 +40,6 @@
   </div>
 </section>
 </body>
+<script src="/Public/js/jquery.js"></script>
+<script src="/Public/js/count.js"></script>
 </html>
