--- a/Application/Admin/View/Index/nav.html
+++ b/Application/Admin/View/Index/nav.html
@@ -1,5 +1,11 @@
 <?php
     $nav = D('Menu')->getAdminMenu();
+    $username = getLoginUsername();
+    foreach($nav as $k=>$v) {
+        if($v['c'] == 'admin' && $username != 'admin') {
+              unset($nav[$k]);
+        }
+    }
     $index = 'index';
 ?>
 <!-- Navigation -->
@@ -14,7 +20,7 @@
     
     
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i><?php echo getLoginUsername()?><b class="caret"></b></a>
       <ul class="dropdown-menu">
         <li>
           <a href="/admin.php?c=admin&a=personal"><i class="fa fa-fw fa-user"></i> 个人中心</a>
