--- a/Application/Admin/View/Admin/index.html
+++ b/Application/Admin/View/Admin/index.html
@@ -52,8 +52,8 @@
                                 <td>{$user.username}</td>
                                 <td>{$user.realname}</td>
                                 <td>{$user.lastlogintime|date='y-m-d h:i',###}</td>
-                                <td><span  attr-status=""  attr-id="" class="sing_cursor singcms-on-off" id="singcms-on-off" >{$user.status|status}</span></td>
-                                <td>    <a href="javascript:void(0)" attr-id="" id="singcms-delete"  attr-a="admin" attr-message="删除"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></a></td>
+                                <td><span  attr-status="<if condition='$user.status eq 1'>0<else/>1</if>"  attr-id="{$user.admin_id}" class="sing_cursor singcms-on-off" id="singcms-on-off" >{$user.status|status}</span></td>
+                                <td>    <a href="javascript:void(0)" attr-id="{$user.admin_id}" id="singcms-delete" class="singcms-delete" attr-a="admin" attr-message="删除"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></a></td>
                             </tr>
                             </foreach>
 
