--- a/Application/Admin/View/Position/index.html
+++ b/Application/Admin/View/Position/index.html
@@ -51,7 +51,7 @@
                                     <span  attr-status="<if condition='$res.status eq 1'>0<else/>1</if>"  attr-id="{$res.id}" class="sing_cursor singcms-on-off" id="singcms-on-off" >{$res.status|status}</span>
                                 </td>
                                 <td>
-                                    <span class="sing_cursor glyphicon glyphicon-edit" aria-hidden="true" id="singcms-edit" attr-id="{$res.id}" ></span>
+                                    <span class="sing_cursor glyphicon glyphicon-edit singcms-edit" aria-hidden="true" id="singcms-edit" attr-id="{$res.id}" ></span>
                                     <a href="javascript:void(0)" id="singcms-delete" class="singcms-delete" attr-id="{$res.id}"  attr-message="删除">
                                         <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
                                     </a>
